--- a/sites/404.html
+++ b/sites/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>404</title>
-    <meta http-equiv="refresh" content="0; url='https://personadocs.github.io/'" />
+    <meta http-equiv="refresh" content="0; url='./index.html'" />
   </head>
   <body>
     <p>Hi :)</p>
