--- a/sites/p5r/texture-edit/index.html
+++ b/sites/p5r/texture-edit/index.html
@@ -389,8 +389,8 @@ Use these settings:</p>
 <p>you can use <a href="https://github.com/DeathChaos25/GFD-Studio/releases/tag/0.6.5">this GFDStudio build</a> that adds the ability to Mass Import and Export textures.</p>
 <p>You select a directory containing .GMDs and a directory containing textures and it'll automatically replace those textures in all models.</p>
 <h2 id="credits">Credits</h2>
-<p>Creator: DniweTamp
-Adapted by: Shujynx</p>
+<p>Creator: DniweTamp</p>
+<p>Adapted by: Shujynx</p>
 
 
 
